feat: Introduce blob animation and optimize UI rendering
Adds a new 'blob' animation to the application's index.html, contributing to a more dynamic and engaging visual experience.

Optimizes UI rendering performance by:
- Isolating Recharts components and forcing a GPU layer using `transform: translateZ(0)`.
- Disabling transitions on Recharts elements to prevent flickering during rapid scrolls.
- Improving animation variants for smoother page transitions and component fades.
- Enhancing the authentication onboarding flow with a dedicated `OnboardingStep` component.
- Introducing ambient background effects for a more immersive feel.
- Adding `Info` icon for tooltips and general information.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
             animation: {
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'float': 'float 6s ease-in-out infinite',
+              'blob': 'blob 10s infinite',
             },
             keyframes: {
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-10px)' },
+              },
+              blob: {
+                '0%': { transform: 'translate(0px, 0px) scale(1)' },
+                '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
+                '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
+                '100%': { transform: 'translate(0px, 0px) scale(1)' },
               }
             }
           }
@@ -66,12 +73,18 @@
         background: #334155;
       }
       
-      /* Smooth transitions for theme switching and layout changes */
+      /* Smooth transitions for theme switching */
       * {
         transition: background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       }
 
-      /* Disable transitions for Recharts to prevent flickering during rapid scrolls */
+      /* PERFORMANCE OPTIMIZATION: Isolate charts and heavy elements */
+      .recharts-wrapper, .recharts-surface {
+        transform: translateZ(0); /* Force GPU layer */
+        will-change: transform;
+      }
+      
+      /* Disable transitions for Recharts to prevent flickering */
       .recharts-wrapper * {
         transition: none !important;
       }
